[gd_scene load_steps=8 format=2]

[ext_resource path="res://themes/vrworkout_theme.theme" type="Theme" id=1]
[ext_resource path="res://scripts/MainGamemodeSelector.gd" type="Script" id=2]
[ext_resource path="res://scripts/ScrollButton.gd" type="Script" id=3]
[ext_resource path="res://assets/arrow_up_scroll_32.png" type="Texture" id=4]
[ext_resource path="res://assets/arrow_down_scroll_32.png" type="Texture" id=5]
[ext_resource path="res://scenes/SettingsGUIPanel.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.380392, 0.298039, 0.831373, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -88.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 56.7285, 507.018 ],
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exercise sets" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 39.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Info" type="RichTextLabel" parent="TabContainer/Exercise sets"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 471.0
margin_top = 10.0
margin_bottom = -106.0
bbcode_enabled = true
bbcode_text = "Description:"
text = "Description:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="TabContainer/Exercise sets"]
margin_left = 5.0
margin_top = 404.0
margin_right = 1015.0
margin_bottom = 455.0
bbcode_enabled = true
bbcode_text = "Exercise sets are a selection of exercises in no particular order. The game decides for you which exercise comes next"
text = "Exercise sets are a selection of exercises in no particular order. The game decides for you which exercise comes next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="TabContainer/Exercise sets"]
anchor_left = 0.005
anchor_top = 0.005
anchor_right = 0.443
anchor_bottom = 0.995
margin_left = -0.0699997
margin_top = 16.66
margin_right = -168.202
margin_bottom = -89.66
theme = ExtResource( 1 )
items = [ "Leg day", null, false, "Ground work", null, false, "Developers choice", null, false, "Strength workout", null, false, "Default", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsGUI" parent="TabContainer/Exercise sets" instance=ExtResource( 6 )]
margin_left = 237.309
margin_top = 11.2246
margin_right = 237.309
margin_bottom = 11.2246
rect_scale = Vector2( 0.8, 0.8 )

[node name="Workouts" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 39.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Info" type="RichTextLabel" parent="TabContainer/Workouts"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 471.0
margin_top = 10.0
margin_bottom = -118.0
bbcode_enabled = true
bbcode_text = "Description:"
text = "Description:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="TabContainer/Workouts"]
anchor_left = 0.005
anchor_top = 0.005
anchor_right = 0.443
anchor_bottom = 0.995
theme = ExtResource( 1 )
items = [ "Winter game contest", null, false, "High pyramid", null, false, "Low pyramid", null, false, "VRWorkout challenge", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="TabContainer/Workouts"]
margin_left = 471.0
margin_top = 368.0
margin_right = 1001.0
margin_bottom = 455.0
bbcode_enabled = true
bbcode_text = "Workouts are a predefined sequence of exercises. The cues within each exercise are random to keep it interesting."
text = "Workouts are a predefined sequence of exercises. The cues within each exercise are random to keep it interesting."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Challenges" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 39.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Header" type="RichTextLabel" parent="TabContainer/Challenges"]
margin_left = 471.0
margin_top = 368.0
margin_right = 1001.0
margin_bottom = 455.0
bbcode_enabled = true
bbcode_text = "Challenges are an exact sequence of cues. Perfect for tracking your progress and for challenging other players."
text = "Challenges are an exact sequence of cues. Perfect for tracking your progress and for challenging other players."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="RichTextLabel" parent="TabContainer/Challenges"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 471.0
margin_top = 59.0
margin_bottom = -112.0
bbcode_enabled = true
bbcode_text = "Description:


Press \"Save challenge\" after your workout if finished if you want to repeat it in the future."
text = "Description:


Press \"Save challenge\" after your workout if finished if you want to repeat it in the future."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="TabContainer/Challenges"]
anchor_left = 0.005
anchor_top = 0.005
anchor_right = 0.443
anchor_bottom = 0.995
custom_constants/vseparation = 5
items = [ "Local challenge 1", null, false, "Local challenge 2", null, false, "Local challenge 3", null, false, "Local challenge 4", null, false, "Online challenge 1", null, false, "Online challenge 2", null, false, "Online challenge 3", null, false, "Online challenge 4", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollUpButton" type="TextureButton" parent="TabContainer/Challenges/ItemList"]
visible = false
margin_left = 380.195
margin_top = 0.819618
margin_right = 444.195
margin_bottom = 64.8196
texture_normal = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
scroll_up = true

[node name="ScrollDownButton" type="TextureButton" parent="TabContainer/Challenges/ItemList"]
visible = false
margin_left = 380.195
margin_top = 398.82
margin_right = 444.195
margin_bottom = 462.82
texture_normal = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="TabContainer/Challenges"]
margin_left = 823.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 48.0
text = "Save challenge"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="TabContainer/Challenges"]
margin_left = 472.0
margin_top = 7.0
margin_right = 665.0
margin_bottom = 48.0
text = "Delete challenge"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="TabContainer/Challenges/Delete"]
visible = true
margin_left = -162.0
margin_top = 24.0
margin_right = 273.0
margin_bottom = 240.0
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "Confirm delete"
resizable = true
dialog_text = "Are you sure you want to delete this challenge?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Onboarding" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 39.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Onboarding" type="Button" parent="TabContainer/Onboarding"]
margin_left = 346.643
margin_top = 293.762
margin_right = 673.643
margin_bottom = 408.762
text = "Start onboarding"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Onboarding"]
visible = false
margin_left = 389.0
margin_top = 112.48
margin_right = 643.0
margin_bottom = 277.48
bbcode_enabled = true
bbcode_text = "[center]Onboarding under construction
Please use the tutorial
to your right
for now[/center]"
text = "Onboarding under construction
Please use the tutorial
to your right
for now"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 5.0
margin_top = 38.0
margin_right = 1019.0
margin_bottom = 508.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="item_selected" from="TabContainer/Exercise sets/ItemList" to="." method="_on_ExerciseSets_item_selected"]
[connection signal="item_selected" from="TabContainer/Workouts/ItemList" to="." method="_on_Workout_item_selected"]
[connection signal="item_selected" from="TabContainer/Challenges/ItemList" to="." method="_on_Challenge_item_selected"]
[connection signal="pressed" from="TabContainer/Challenges/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="TabContainer/Challenges/Delete" to="." method="_on_DeleteChallenge_pressed"]
[connection signal="confirmed" from="TabContainer/Challenges/Delete/ConfirmationDialog" to="." method="_on_DeleteChallenge_confirmed"]
[connection signal="pressed" from="TabContainer/Onboarding/Onboarding" to="." method="_on_Onboarding_pressed"]
